Multiple TQ related chnages
SVN-Revision: 14880

--- a/flexclient/dag/DAG.mxml
+++ b/flexclient/dag/DAG.mxml
@@ -605,6 +605,7 @@ creationComplete="initApp()"  width="100%" height="100%" paddingTop="0" paddingB
 		{
 		    var customNode : CustomFormulaNode = customNodeList.getItemAt(i) as CustomFormulaNode;
 		    var customNodeName : String = customNode.name;
+		   
 		    var nodeIds : Array = customNode.name.split("_");
 		    var firstNodeId : String = nodeIds[0];
 		    var secondNodeId : String = nodeIds[1];
@@ -1333,8 +1334,6 @@ creationComplete="initApp()"  width="100%" height="100%" paddingTop="0" paddingB
 	 	}
 	 	else
 	 	{
-	     
-	 	     AlertManager.showWarning("Node is not valid for Temporal Query");	
 	 	     AlertManager.showWarning("Node is not valid for Temporal Query");	
 	 	}
 	 }
@@ -1439,7 +1438,6 @@ creationComplete="initApp()"  width="100%" height="100%" paddingTop="0" paddingB
                if(customNode.getLhsTimeInterval() != "null")
                {
 					//Right now there exists only DatePicker on LHS
-					Alert.show("This condition is not yet Handled");	               	
                }
                else
                {
@@ -1765,8 +1763,12 @@ creationComplete="initApp()"  width="100%" height="100%" paddingTop="0" paddingB
            }
            else if(operation == "rePaint")
            {
-           	  customNodeName = getSingleCustomNodeName(dagNode);
-           	  
+           	  //customNodeName = getSingleCustomNodeName(dagNode);
+           	  customNodeName = node.name;
+           	  var dagNodesList  : ArrayCollection = new ArrayCollection();
+           	  dagNodesList.addItemAt(dagNode,0);
+	          associatedSingleDagNodes[customNodeName] = dagNodesList;   
+
            }
            
 	 	var customNode : SingleNodeCustomFormulaNode  = new SingleNodeCustomFormulaNode();
@@ -1803,7 +1805,11 @@ creationComplete="initApp()"  width="100%" height="100%" paddingTop="0" paddingB
 	   mainPanel.addChild(customNode);
 	   drawLines(dagNode,customNode.x,customNode.y,customNode.name);
 	 	
-	 	singleNodeTQPope.removeMe();
+	 	if(operation != "rePaint")
+	 	{
+	 		singleNodeTQPope.removeMe();
+	 	}
+	 	
 	 }           
 	
       public function addCustomFromulaNode(node : CustomFormulaNode):void
@@ -1816,7 +1822,7 @@ creationComplete="initApp()"  width="100%" height="100%" paddingTop="0" paddingB
             var operation : String = node.getOperation();
             var existingCustomNode : CustomFormulaNode = null;
            // var customNodeDagNodes : Object  = new Object();
-            var dagNodesList : ArrayCollection  = new ArrayCollection();
+           // var dagNodesList : ArrayCollection  = new ArrayCollection();
             
             //Initializing the DAG NOdes
             if(operation == "create")
@@ -1855,7 +1861,12 @@ creationComplete="initApp()"  width="100%" height="100%" paddingTop="0" paddingB
             }
             else if(operation == "rePaint")
             {
-            	customNodeName = getCustomNodeName(dagNode1,dagNode2);
+            	customNodeName = node.name;
+            	var dagNodesList : ArrayCollection  = new ArrayCollection();
+            	dagNodesList.addItemAt(dagNode1,0);
+            	dagNodesList.addItemAt(dagNode2,1);
+            	associatedDAGNodes[customNodeName] = dagNodesList;
+            	//getCustomNodeName(dagNode1,dagNode2);
             	//This condition should be  when operation is create or repaint Create
             	/*var nodesName : String = dagNode1.nodeNumber + "_" + dagNode2.nodeNumber; 
 	            var cunstomNodeNumber : int = 1;
@@ -1943,7 +1954,11 @@ creationComplete="initApp()"  width="100%" height="100%" paddingTop="0" paddingB
             drawLines(dagNode2,customFormulaNode.x,customFormulaNode.y,customFormulaNode.name);
          
             //Removing the pop up
-            popUp.removeMe();
+            if(operation != "rePaint")
+            {
+           		 popUp.removeMe(); 	
+            }
+           
       }
       private function drawLines(dagNode : DAGNode,toX : int,toY : int,customNodeName:String):void
       {
