--- a/flexclient/dag/Components/PopupWindow.mxml
+++ b/flexclient/dag/Components/PopupWindow.mxml
@@ -2,7 +2,7 @@
 <mx:TitleWindow xmlns:mx="http://www.adobe.com/2006/mxml" layout="absolute" width="700" height="200"
 	 showCloseButton="true" close="removeMe();" borderColor="#0000FF" backgroundColor="white" 
 	 left="0" right="0" borderThicknessLeft="2" borderThicknessRight="2" borderThicknessBottom="2" 
-	 borderThicknessTop="5" creationComplete="removeComponent()">
+	 borderThicknessTop="5">
 	 <mx:Script>
 	 	<![CDATA[
 	 		import mx.events.ValidationResultEvent;
@@ -201,7 +201,7 @@
             customFormulaNode.name = nodeName;
             
             //Setting custom column Name with time Interval
-            trace("cb6.selectedItem = " + cb6.selectedItem);
+            //trace("cb6.selectedItem = " + cb6.selectedItem);
             customFormulaNode.setCustomColumnName(customColumnName.text + "#" + cb6.selectedItem);
             
             
@@ -413,11 +413,7 @@
            	       				   labelHBox.removeChild(existingIntervalLabel);	
            	       				}
            	       			}
-							
-							//depends on view shows components 							           	       		
-							if(this.parentApplication.view != "Result"){
-								
-							
+           	       		
            	       			//Creating the DatePicker
            	       			existingDatePicker= myBox.getChildByName("datePicker") as DateField;
            	 	        	if(existingDatePicker == null)
@@ -443,11 +439,10 @@
            	 	    	   	  
            	 	    	   	  labelHBox.addChild(pickerLabel);
            	 	    	   }
-       					}
-           	 	    }
-           	 	}
-        	  }
-           } 
+           	 	    	}
+           	 		}
+        	  	}
+           	} 
            	
            	/*
                 This method will enable/Disable the right hand side controls based on the relational operator selected
@@ -516,7 +511,7 @@
     			here if a dropdown list contains only on item then it will show in comboBox as selected item
     			if item length is more than 1 then i will show prompt like "-select-" and store item text to myToolTip variable for further refrence.    			 
     		*/ 		
-    		public function validateComboboxText():void{     			   			
+    		public function validateComboboxText():void{ 
     			 if(myArray1.length <= 1){
 	    			 cb1.selectedIndex = 0;
 	    			 cb1.toolTip=cb1.selectedLabel.toString();
@@ -587,24 +582,6 @@
 		      submitButton.errorString="";		      
 		      
 		    }
-		    
-		    private function removeComponent():void {
-		      if(this.parentApplication.view=="Result"){
-		      	cb4.visible = false;
-		      	cb5.visible = false;
-		      	txtInput.visible = false;
-		      	lb4.visible = false;
-		      	lb5.visible = false;
-		      	lb6.visible = false;
-		      }else{
-		      	cb4.visible = true;
-		      	cb5.visible = true;
-		      	txtInput.visible = true;
-		      	lb4.visible = true;
-		      	lb5.visible = true;
-		      	lb6.visible = true;
-		      }
-		    }
     		    	  
 	 	]]>
 	 </mx:Script>
@@ -652,7 +629,6 @@
       <mx:Spacer height="5"/> 	 
 	 <mx:HBox x="20" horizontalGap="6" width="100%">
          <mx:Label id="columnLabel" width="170" text="Please Enter Column Name :"/>
-              
          <mx:TextInput id="customColumnName" width="250" restrict="0-9 A-Z a-z" borderColor="blue" focusOut="validate()"/>
          <mx:ComboBox id="cb6" name="timeIntervalCb2" dataProvider="{myArray5}" width="100"  borderThickness="0" 
          	borderColor="blue" prompt="--Select--" itemRenderer="mx.controls.Label" close="truncateLongText(event)"
