--- a/flexclient/dag/DAG.mxml
+++ b/flexclient/dag/DAG.mxml
@@ -116,6 +116,9 @@ creationComplete="initApp()"  width="100%" height="100%" paddingTop="0" paddingB
 	private var associatedDAGNodes : Object = new Object;
 	
 	private var associatedSingleDagNodes : Object = new Object;
+	
+	[Bindable]
+	public var operation:String="";	
 	/**
 	* Timer handler  to check container has been initialized.	
 	*/
@@ -465,7 +468,15 @@ creationComplete="initApp()"  width="100%" height="100%" paddingTop="0" paddingB
 	* Repaint handler DAG on NEXT, PREVIOUS and REDEFINE buttons.
 	*/
 	private function repaintHandler(event: ResultEvent):void
-	{
+	{	 
+		if(view=="Result"){
+			TQBtn.label = "Calculate Query";
+			TQBtn.toolTip = "Calculate query on selected nodes"
+		}else if(view=="AddLimit"){		
+			TQBtn.label = "Temporal Query";
+			TQBtn.toolTip = "Create temporal query on selected nodes"		
+		}else{}		
+		
 		var nodeMap : Object =  event.result as Object ;
 		
 		var customNodeList : ArrayCollection = nodeMap["customFormulaNodeList"];
@@ -605,7 +616,6 @@ creationComplete="initApp()"  width="100%" height="100%" paddingTop="0" paddingB
 		{
 		    var customNode : CustomFormulaNode = customNodeList.getItemAt(i) as CustomFormulaNode;
 		    var customNodeName : String = customNode.name;
-		   
 		    var nodeIds : Array = customNode.name.split("_");
 		    var firstNodeId : String = nodeIds[0];
 		    var secondNodeId : String = nodeIds[1];
@@ -1334,7 +1344,7 @@ creationComplete="initApp()"  width="100%" height="100%" paddingTop="0" paddingB
 	 	}
 	 	else
 	 	{
-	 	     AlertManager.showWarning("Node is not valid for Temporal Query");	
+	          AlertManager.showWarning("Node is not valid for Temporal Query");	
 	 	}
 	 }
 	 
@@ -1431,9 +1441,12 @@ creationComplete="initApp()"  width="100%" height="100%" paddingTop="0" paddingB
                  //Setting the node name
                  singleNodeTQPope.customNodeName = customNode.name;
                
-               //Setting the custom column Name
-               singleNodeTQPope.customColumnName.text = customNode.getCustomColumnName();
                
+               //Setting the custom column name and time interval
+	        	var tmpCustomNode:Array = customNode.getCustomColumnName().split('#',2);
+	        	singleNodeTQPope.customColumnName.text = tmpCustomNode[0].toString();
+	        	singleNodeTQPope.cb6.selectedItem = tmpCustomNode[1].toString();
+	        	
                //Handling LHS DatePickers and Text Inputs
                if(customNode.getLhsTimeInterval() != "null")
                {
@@ -1568,10 +1581,8 @@ creationComplete="initApp()"  width="100%" height="100%" paddingTop="0" paddingB
 	     var relationalOprsList : ArrayCollection = queryDataMap["fourthDropDown"];
 	     var timeIntervalsList : ArrayCollection = queryDataMap["timeIntervals"];
 	     var entitiesNameList : ArrayCollection = queryDataMap["entityList"];
-	    //Opening the pop up window
-	   
-	    popUp = PopupWindow(PopUpManager.createPopUp(this, PopupWindow, true));
-	   
+	    //Opening the pop up window	    
+	    popUp = PopupWindow(PopUpManager.createPopUp(this, PopupWindow, true));	    
 	    popUp.showCloseButton = true; 
 	    
       //Setting the values to variables  
@@ -1635,11 +1646,13 @@ creationComplete="initApp()"  width="100%" height="100%" paddingTop="0" paddingB
 	        popUp.buttonLabel = "Edit";
 	        popUp.cb1.selectedItem = currentCustomNode.getFirstSelectedAttrName();
 	        popUp.cb2.selectedItem = currentCustomNode.getSelectedArithmeticOp();
-	        popUp.cb3.selectedItem = currentCustomNode.getSecondSelectedAttrName();
-	        popUp.cb4.selectedItem = currentCustomNode.getSelectedLogicalOp();  
-	        
-	        //Setting the custom column name
-	        popUp.customColumnName.text = currentCustomNode.getCustomColumnName();
+	        popUp.cb3.selectedItem = currentCustomNode.getSecondSelectedAttrName();	        	        	
+        	popUp.cb4.selectedItem = currentCustomNode.getSelectedLogicalOp();  
+        
+        	//Setting the custom column name and time interval
+        	var tmpCustomNode:Array = currentCustomNode.getCustomColumnName().split('#',2);
+        	popUp.customColumnName.text = tmpCustomNode[0].toString();
+        	popUp.cb6.selectedItem = tmpCustomNode[1].toString();
 	        
 	        //If the selected Logical Operators are isNull or IsNotNull
 	        if((currentCustomNode.getSelectedLogicalOp() == "Is Null") || (currentCustomNode.getSelectedLogicalOp() == "Is Not Null"))
@@ -1653,11 +1666,12 @@ creationComplete="initApp()"  width="100%" height="100%" paddingTop="0" paddingB
 	        }
 	        else
 	        {
-	        	//This is the condition when there is both time and time Interval 
+	           	//This is the condition when there is both time and time Interval 
 	       		 if(currentCustomNode.getTimeInterval() != "null")
-	        	 {
-	        		popUp.txtInput.text = currentCustomNode.getTimeValue();
-	        		popUp.cb5.selectedItem = currentCustomNode.getTimeInterval(); 
+	        	 {    	 	
+	        			popUp.txtInput.text = currentCustomNode.getTimeValue();
+	        			popUp.cb5.selectedItem = currentCustomNode.getTimeInterval();
+	        	 	
 	              }
 		        else
 		        {
@@ -1711,8 +1725,8 @@ creationComplete="initApp()"  width="100%" height="100%" paddingTop="0" paddingB
 	           	 	
 	           	 	popUp.labelHBox.addChild(pickerLabel);
 		        }
-	        }
-	   }
+		      }	        
+	   }	   
 	   PopUpManager.centerPopUp(popUp);
 	}
 	
@@ -2093,7 +2107,7 @@ creationComplete="initApp()"  width="100%" height="100%" paddingTop="0" paddingB
 			<mx:ApplicationControlBar top="0" dock="true" height="5%" width="100%" fillAlphas="[1.0, 1.0]" fillColors="[#f9e886, #f9e886]">
 				<mx:Button label="Add Link" click="drawLine()" fontSize="9" toolTip="Add Link to nodes"/>
 				<mx:Button label="Clear All Paths" click="clearPaths()" fontSize="9" toolTip="Clear All Paths"/>
-				<mx:Button label="Temporal Query" click="openTQPopUp()" fontSize="9" toolTip="Create temporal query on selected nodes"/>				
+				<mx:Button label="Temporal Query" id="TQBtn" click="openTQPopUp()" fontSize="9" toolTip="Create temporal query on selected nodes"/>								
 			</mx:ApplicationControlBar>
 			<mx:Canvas id="mainPanel" width="100%" height="95%" borderStyle="none">
 			</mx:Canvas>
