--- a/flexclient/dag/Components/PopupWindow.mxml
+++ b/flexclient/dag/Components/PopupWindow.mxml
@@ -2,7 +2,7 @@
 <mx:TitleWindow xmlns:mx="http://www.adobe.com/2006/mxml" layout="absolute" width="700" height="200"
 	 showCloseButton="true" close="removeMe();" borderColor="#0000FF" backgroundColor="white" 
 	 left="0" right="0" borderThicknessLeft="2" borderThicknessRight="2" borderThicknessBottom="2" 
-	 borderThicknessTop="5">
+	 borderThicknessTop="5" creationComplete="removeComponent()">
 	 <mx:Script>
 	 	<![CDATA[
 	 		import mx.events.ValidationResultEvent;
@@ -114,7 +114,7 @@
            	  var timeIntervalValue : String =  null;
            	  var customFormulaString : String = null;
            	  var customFormulaNode : CustomFormulaNode = new CustomFormulaNode();
-           	  
+           	  if(this.parentApplication.view!="Result"){
            	  //Here based on the last control, the we get the selected value and pass as parameter
            	  existingTextBox = myBox.getChildByName("txtInput") as TextInput;
            	  
@@ -161,7 +161,8 @@
            	  	   	  customFormulaNode.setTimeInterval("null");
            	  	   }
            	  }
-           	  
+           	 }
+           	 
            	//Getting the left and right operands
 		 	 customFormulaNode.setFirstSelectedAttrName(cb1.selectedItem.toString());
              customFormulaNode.setSecondSelectedAttrName(cb3.selectedItem.toString());           	
@@ -177,19 +178,20 @@
             
             //Setting the selected Arithmetic Operator
             customFormulaNode.setSelectedArithmeticOp(cb2.selectedItem.toString());
-             
-            //Setting theselected logical operator
-            customFormulaNode.setSelectedLogicalOp(cb4.selectedItem.toString());  
-             
-             if(timeIntervalValue != null)
-             {
-             	customFormulaString = firstEntityName+"."+cb1.selectedItem + "\n "+ cb2.selectedItem + " \n" +secondEntityName+"."+cb3.selectedItem + "\n" + cb4.selectedItem + " " + timeValue + " " +  timeIntervalValue;
-             } 
-             else
-             {
-              	customFormulaString =  firstEntityName+"."+cb1.selectedItem+ " \n"+ cb2.selectedItem + "\n " + secondEntityName+"."+cb3.selectedItem  + "\n" + cb4.selectedItem + " " + timeValue ;
-             }
-             
+            
+            if(this.parentApplication.view!="Result"){ 
+            	//Setting theselected logical operator
+            	customFormulaNode.setSelectedLogicalOp(cb4.selectedItem.toString());  
+            
+	            if(timeIntervalValue != null)
+	            {
+	            	customFormulaString = firstEntityName+"."+cb1.selectedItem + "\n "+ cb2.selectedItem + " \n" +secondEntityName+"."+cb3.selectedItem + "\n" + cb4.selectedItem + " " + timeValue + " " +  timeIntervalValue;
+	            } 
+	            else
+	            {
+	             	customFormulaString =  firstEntityName+"."+cb1.selectedItem+ " \n"+ cb2.selectedItem + "\n " + secondEntityName+"."+cb3.selectedItem  + "\n" + cb4.selectedItem + " " + timeValue ;
+	            }
+            } 
              //Setting the first selected DAG Nodes Properties
              customFormulaNode.setFirstNodeName(firstEntityName); 
              customFormulaNode.setFirstNodeExpId(firstEntityExpId); 
@@ -200,10 +202,8 @@
             
             customFormulaNode.name = nodeName;
             
-            //Setting custom column Name with time Interval
-            //trace("cb6.selectedItem = " + cb6.selectedItem);
+            //Setting custom column Name with time Interval            
             customFormulaNode.setCustomColumnName(customColumnName.text + "#" + cb6.selectedItem);
-            
             
             parentApplication.customFormulaString = customFormulaString;
              
@@ -413,7 +413,11 @@
            	       				   labelHBox.removeChild(existingIntervalLabel);	
            	       				}
            	       			}
-           	       		
+							
+							//depends on view shows components 							           	       		
+							if(this.parentApplication.view != "Result"){
+								
+							
            	       			//Creating the DatePicker
            	       			existingDatePicker= myBox.getChildByName("datePicker") as DateField;
            	 	        	if(existingDatePicker == null)
@@ -439,10 +443,11 @@
            	 	    	   	  
            	 	    	   	  labelHBox.addChild(pickerLabel);
            	 	    	   }
-           	 	    	}
-           	 		}
-        	  	}
-           	} 
+       					}
+           	 	    }
+           	 	}
+        	  }
+           } 
            	
            	/*
                 This method will enable/Disable the right hand side controls based on the relational operator selected
@@ -511,7 +516,9 @@
     			here if a dropdown list contains only on item then it will show in comboBox as selected item
     			if item length is more than 1 then i will show prompt like "-select-" and store item text to myToolTip variable for further refrence.    			 
     		*/ 		
-    		public function validateComboboxText():void{ 
+    		public function validateComboboxText():void{  
+    			if(this.parentApplication.operation==""){     				
+    				this.parentApplication.operation="edit"; 				
     			 if(myArray1.length <= 1){
 	    			 cb1.selectedIndex = 0;
 	    			 cb1.toolTip=cb1.selectedLabel.toString();
@@ -550,7 +557,8 @@
     			 }else{
     				cb5.selectedIndex = -1;
     				cb5.toolTip=cb5.selectedLabel.toString();
-    			 }
+    			 }    			 
+    		   }  
     		}
     		
     		private function validate():Boolean{    			
@@ -581,6 +589,24 @@
 		      submitButton.enabled=true;
 		      submitButton.errorString="";		      
 		      
+		    }
+		    
+		    private function removeComponent():void {
+		      if(this.parentApplication.view=="Result"){
+		      	cb4.visible = false;
+		      	cb5.visible = false;
+		      	txtInput.visible = false;
+		      	lb4.visible = false;
+		      	lb5.visible = false;
+		      	lb6.visible = false;
+		      }else{
+		      	cb4.visible = true;
+		      	cb5.visible = true;
+		      	txtInput.visible = true;
+		      	lb4.visible = true;
+		      	lb5.visible = true;
+		      	lb6.visible = true;
+		      }
 		    }
     		    	  
 	 	]]>
@@ -629,6 +655,7 @@
       <mx:Spacer height="5"/> 	 
 	 <mx:HBox x="20" horizontalGap="6" width="100%">
          <mx:Label id="columnLabel" width="170" text="Please Enter Column Name :"/>
+              
          <mx:TextInput id="customColumnName" width="250" restrict="0-9 A-Z a-z" borderColor="blue" focusOut="validate()"/>
          <mx:ComboBox id="cb6" name="timeIntervalCb2" dataProvider="{myArray5}" width="100"  borderThickness="0" 
          	borderColor="blue" prompt="--Select--" itemRenderer="mx.controls.Label" close="truncateLongText(event)"
