--- a/flexclient/dag/Components/PopupWindow.mxml
+++ b/flexclient/dag/Components/PopupWindow.mxml
@@ -2,7 +2,7 @@
 <mx:TitleWindow xmlns:mx="http://www.adobe.com/2006/mxml" layout="absolute" width="700" height="200"
 	 showCloseButton="true" close="removeMe();" borderColor="#0000FF" backgroundColor="white" 
 	 left="0" right="0" borderThicknessLeft="2" borderThicknessRight="2" borderThicknessBottom="2" 
-	 borderThicknessTop="5" creationComplete="removeComponent()">
+	 borderThicknessTop="5">
 	 <mx:Script>
 	 	<![CDATA[
 	 		import mx.events.ValidationResultEvent;
@@ -114,7 +114,7 @@
            	  var timeIntervalValue : String =  null;
            	  var customFormulaString : String = null;
            	  var customFormulaNode : CustomFormulaNode = new CustomFormulaNode();
-           	  if(this.parentApplication.view!="Result"){
+           	  
            	  //Here based on the last control, the we get the selected value and pass as parameter
            	  existingTextBox = myBox.getChildByName("txtInput") as TextInput;
            	  
@@ -161,7 +161,7 @@
            	  	   	  customFormulaNode.setTimeInterval("null");
            	  	   }
            	  }
-           	 }
+           	 
            	 
            	//Getting the left and right operands
 		 	 customFormulaNode.setFirstSelectedAttrName(cb1.selectedItem.toString());
@@ -179,19 +179,19 @@
             //Setting the selected Arithmetic Operator
             customFormulaNode.setSelectedArithmeticOp(cb2.selectedItem.toString());
             
-            if(this.parentApplication.view!="Result"){ 
-            	//Setting theselected logical operator
-            	customFormulaNode.setSelectedLogicalOp(cb4.selectedItem.toString());  
             
-	            if(timeIntervalValue != null)
-	            {
-	            	customFormulaString = firstEntityName+"."+cb1.selectedItem + "\n "+ cb2.selectedItem + " \n" +secondEntityName+"."+cb3.selectedItem + "\n" + cb4.selectedItem + " " + timeValue + " " +  timeIntervalValue;
-	            } 
-	            else
-	            {
-	             	customFormulaString =  firstEntityName+"."+cb1.selectedItem+ " \n"+ cb2.selectedItem + "\n " + secondEntityName+"."+cb3.selectedItem  + "\n" + cb4.selectedItem + " " + timeValue ;
-	            }
+        	//Setting theselected logical operator
+        	customFormulaNode.setSelectedLogicalOp(cb4.selectedItem.toString());  
+        
+            if(timeIntervalValue != null)
+            {
+            	customFormulaString = firstEntityName+"."+cb1.selectedItem + "\n "+ cb2.selectedItem + " \n" +secondEntityName+"."+cb3.selectedItem + "\n" + cb4.selectedItem + " " + timeValue + " " +  timeIntervalValue;
             } 
+            else
+            {
+             	customFormulaString =  firstEntityName+"."+cb1.selectedItem+ " \n"+ cb2.selectedItem + "\n " + secondEntityName+"."+cb3.selectedItem  + "\n" + cb4.selectedItem + " " + timeValue ;
+            }
+             
              //Setting the first selected DAG Nodes Properties
              customFormulaNode.setFirstNodeName(firstEntityName); 
              customFormulaNode.setFirstNodeExpId(firstEntityExpId); 
@@ -203,8 +203,8 @@
             customFormulaNode.name = nodeName;
             
             //Setting custom column Name with time Interval            
-            customFormulaNode.setCustomColumnName(customColumnName.text + "#" + cb6.selectedItem);
-            
+            //customFormulaNode.setCustomColumnName(customColumnName.text + "#" + cb6.selectedItem);
+            customFormulaNode.setCustomColumnName(customColumnName.text);
             parentApplication.customFormulaString = customFormulaString;
              
             this.parentApplication.rpcService.addEventListener(FaultEvent.FAULT, faultHandler);
@@ -589,25 +589,7 @@
 		      submitButton.enabled=true;
 		      submitButton.errorString="";		      
 		      
-		    }
-		    
-		    private function removeComponent():void {
-		      if(this.parentApplication.view=="Result"){
-		      	cb4.visible = false;
-		      	cb5.visible = false;
-		      	txtInput.visible = false;
-		      	lb4.visible = false;
-		      	lb5.visible = false;
-		      	lb6.visible = false;
-		      }else{
-		      	cb4.visible = true;
-		      	cb5.visible = true;
-		      	txtInput.visible = true;
-		      	lb4.visible = true;
-		      	lb5.visible = true;
-		      	lb6.visible = true;
-		      }
-		    }
+		    }	    
     		    	  
 	 	]]>
 	 </mx:Script>
@@ -655,12 +637,7 @@
       <mx:Spacer height="5"/> 	 
 	 <mx:HBox x="20" horizontalGap="6" width="100%">
          <mx:Label id="columnLabel" width="170" text="Please Enter Column Name :"/>
-              
-         <mx:TextInput id="customColumnName" width="250" restrict="0-9 A-Z a-z" borderColor="blue" focusOut="validate()"/>
-         <mx:ComboBox id="cb6" name="timeIntervalCb2" dataProvider="{myArray5}" width="100"  borderThickness="0" 
-         	borderColor="blue" prompt="--Select--" itemRenderer="mx.controls.Label" close="truncateLongText(event)"
-         	rowCount="10" toolTip=""/>
-         <mx:Label id="lb7" name="label6" width="100%" height="30" color="blue" text="{timeIntrvalLabel}" fontStyle="normal" fontWeight="bold"/>
+         <mx:TextInput id="customColumnName" width="300" restrict="0-9 A-Z a-z" borderColor="blue" focusOut="validate()"/>        
 	 </mx:HBox>
 	  
 	  <mx:HBox x="20" y="50">
